tests/specs/ecosystem/bureaudouble/sonner/0_0_2.test
bureaudouble/sonner/0.0.2
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@bureaudouble-forks/react-style-singleton@^0.0.1": "jsr:@bureaudouble-forks/react-style-singleton@0.0.1",
      "npm:@types/react@^18.2": "npm:@types/react@18.3.1",
      "npm:react-dom@^18.2.0": "npm:react-dom@18.3.1_react@18.3.1",
      "npm:react@^18.2.0": "npm:react@18.3.1"
    },
    "jsr": {
      "@bureaudouble-forks/react-style-singleton@0.0.1": {
        "integrity": "c9548629b5bc658f15236bdd6af7075da3196c5f2dfb526e9da59097bc47db47",
        "dependencies": [
          "npm:@types/react@^18.2"
        ]
      }
    },
    "npm": {
      "@types/prop-types@15.7.12": {
        "integrity": "sha512-5zvhXYtRNRluoE/jAp4GVsSduVUzNWKkOZrCDBWYtE7biZywwdC2AcEzg+cSMLFRfVgeAFqpfNabiPjxFddV1Q==",
        "dependencies": {}
      },
      "@types/react@18.3.1": {
        "integrity": "sha512-V0kuGBX3+prX+DQ/7r2qsv1NsdfnCLnTgnRJ1pYnxykBhGMz+qj+box5lq7XsO5mtZsBqpjwwTu/7wszPfMBcw==",
        "dependencies": {
          "@types/prop-types": "@types/prop-types@15.7.12",
          "csstype": "csstype@3.1.3"
        }
      },
      "csstype@3.1.3": {
        "integrity": "sha512-M1uQkMl8rQK/szD0LNhtqxIPLpimGm8sOBwU7lLnCpSbTyY3yeU1Vc7l4KT5zT4s/yOxHH5O7tIuuLOCnLADRw==",
        "dependencies": {}
      },
      "js-tokens@4.0.0": {
        "integrity": "sha512-RdJUflcE3cUzKiMqQgsCu06FPu9UdIJO0beYbPhHN4k6apgJtifcoCtT9bcxOpYBtpD2kCM6Sbzg4CausW/PKQ==",
        "dependencies": {}
      },
      "loose-envify@1.4.0": {
        "integrity": "sha512-lyuxPGr/Wfhrlem2CL/UcnUc1zcqKAImBDzukY7Y5F/yQiNdko6+fRLevlw1HgMySw7f611UIY408EtxRSoK3Q==",
        "dependencies": {
          "js-tokens": "js-tokens@4.0.0"
        }
      },
      "react-dom@18.3.1_react@18.3.1": {
        "integrity": "sha512-5m4nQKp+rZRb09LNH59GM4BxTh9251/ylbKIbpe7TpGxfJ+9kv6BLkLBXIjjspbgbnIBNqlI23tRnTWT0snUIw==",
        "dependencies": {
          "loose-envify": "loose-envify@1.4.0",
          "react": "react@18.3.1",
          "scheduler": "scheduler@0.23.2"
        }
      },
      "react@18.3.1": {
        "integrity": "sha512-wS+hAgJShR0KhEvPJArfuPVN1+Hz1t0Y6n5jLrGQbkb4urgPE/0Rve+1kMB1v/oWgHgm4WIcV+i7F2pTVj+2iQ==",
        "dependencies": {
          "loose-envify": "loose-envify@1.4.0"
        }
      },
      "scheduler@0.23.2": {
        "integrity": "sha512-UOShsPwz7NrMUqhR6t0hWjFduvOzbtv7toDH1/hIrfRNIDBnnBWd0CwJTGvTpngVlmwGCdP9/Zl/tVrDqcuYzQ==",
        "dependencies": {
          "loose-envify": "loose-envify@1.4.0"
        }
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2503 [ERROR]: Cannot find namespace 'JSX'.
export const getAsset = (type: ToastTypes): JSX.Element | null =>({} as never);
                                            ~~~
    at file://<tmpdir>/src/assets.tsx:3:45

TS2304 [ERROR]: Cannot find name 'HTMLButtonElement'.
  onClick: (event: React.MouseEvent<HTMLButtonElement, MouseEvent>) => void;
                                    ~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/types.ts:38:37

TS2552 [ERROR]: Cannot find name 'MouseEvent'. Did you mean 'CloseEvent'?
  onClick: (event: React.MouseEvent<HTMLButtonElement, MouseEvent>) => void;
                                                       ~~~~~~~~~~
    at file://<tmpdir>/src/types.ts:38:56

    'CloseEvent' is declared here.
    declare var CloseEvent: {
                ~~~~~~~~~~
        at asset:///lib.deno.websocket.d.ts:32:13

Found 3 errors.

